--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "sample-expressjs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "name": "@uplift-ltd/interview-frontend-node-server",
+  "version": "0.1.0",
+  "proxy": "http://localhost:8000",
+  "license": "UNLICENSED",
   "scripts": {
-	"start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gql-codegen": "graphql-codegen --config codegen.yml",
+    "start": "ts-node src/index.ts",
+    "start:build": "node build/index.js",
+    "build": "run-s clean compile copy",
+    "clean": "rm -rf build",
+    "compile": "tsc --outDir build",
+    "copy": "cp src/schema.graphql build/schema.graphql",
+    "test": "run-s eslint:check prettier:check jest",
+    "jest": "jest",
+    "eslint:check": "eslint src/ --ext .js,.jsx,.ts,.tsx",
+    "prettier:write": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css,scss}\"",
+    "prettier:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx,json,md,css,scss}\""
   },
-  "repository": {
-    "type": "git",
-    "url": "github.com/digitalocean-appsail/sample-express"
-  },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "apollo-server-express": "^2.22.2",
+    "express": "^4.17.1",
+    "graphql": "^15.5.0",
+    "typescript": "^4.5.5",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "graphql-tools": "^7.0.4",
+    "jest": "^26.6.3"
   }
 }
